manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: laravel
  namespace: default
spec:
  rules:
  - host: laravel.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: laravel-service
            port:
              number: 80
  tls:
  - hosts:
     - laravel.example.com
    secretName: laravel-example-com
